clusters/default/nextcloud/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
  namespace: nextcloud
  labels:
    app: nextcloud-redis
spec:
  type: ClusterIP
  selector:
    app: nextcloud-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
