clusters/default/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
