clusters/default/nextcloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.__BASE-DOMAIN__`)
      kind: Rule
      middlewares:
        - name: nextcloud-headers
      services:
        - name: nextcloud
          port: 80
---
# Nextcloud's WebDAV / CalDAV / CardDAV clients require .well-known
# redirects + HSTS. Apache image ships its own .htaccess that handles
# the redirects, but we still want HSTS at the edge.
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    referrerPolicy: no-referrer
